// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`actual Current session first viewport at 40 x 24 'fullscreen' 1`] = `
"Current session
up/down Select | enter Open |
escape/ctrl+c Back
pageUp/pageDown Scroll
⛁⛁⛁⛁⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
fake/test
SDK mismatch: 44.5k > text ~1.8k; gap
Unknown
~44.5k / 1M (4.5%)
⛁ Tools ~1.8k (0.2%)
⛁ Conversation ~12 (<0.1%)
⛁ Unknown ~42.7k (4.3%)
⛶ Free ~955.5k (95.5%)

Memory ~0
No retained memory
→ Off
  Runs
  Project
  Mark"
`;

exports[`actual Current session first viewport at 40 x 24 'fullscreen' 2`] = `
"Current session
up/down Select | enter Open |
escape/ctrl+c Back
pageUp/pageDown Scroll
⛁ Conversation ~12 (<0.1%)
⛁ Unknown ~42.7k (4.3%)
⛶ Free ~955.5k (95.5%)

Memory ~0
No retained memory

Pi rebuilt text estimate (not provider
wire)

S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        ███████░░░  72.0% 36/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark"
`;

exports[`actual Current session first viewport at 40 x 24 'regular' 1`] = `
"Current session
up/down Select | enter Open |
escape/ctrl+c Back
pageUp/pageDown Scroll
⛁⛁⛁⛁⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
fake/test
SDK mismatch: 44.5k > text ~1.8k; gap
Unknown
~44.5k / 1M (4.5%)
⛁ Tools ~1.8k (0.2%)
⛁ Conversation ~12 (<0.1%)
⛁ Unknown ~42.7k (4.3%)
⛶ Free ~955.5k (95.5%)

Memory ~0
No retained memory
→ Off
  Runs
  Project
  Mark"
`;

exports[`actual Current session first viewport at 40 x 24 'regular' 2`] = `
"Current session
up/down Select | enter Open |
escape/ctrl+c Back
pageUp/pageDown Scroll
⛁ Conversation ~12 (<0.1%)
⛁ Unknown ~42.7k (4.3%)
⛶ Free ~955.5k (95.5%)

Memory ~0
No retained memory

Pi rebuilt text estimate (not provider
wire)

S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        ███████░░░  72.0% 36/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark"
`;

exports[`actual Current session first viewport at 80 x 24 'fullscreen' 1`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
pageUp/pageDown Scroll
⛁ ⛁ ⛁ ⛁ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   fake/test
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   SDK mismatch: 44.5k > text ~1.8k; gap
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   Unknown
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Tools ~1.8k (0.2%)
                                          ⛁ Conversation ~12 (<0.1%)
                                          ⛁ Unknown ~42.7k (4.3%)
                                          ⛶ Free ~955.5k (95.5%)

Memory ~0
No retained memory

Pi rebuilt text estimate (not provider wire)

S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
→ Off
  Runs
  Project
  Mark"
`;

exports[`actual Current session first viewport at 80 x 24 'fullscreen' 2`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
pageUp/pageDown Scroll
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Tools ~1.8k (0.2%)
                                          ⛁ Conversation ~12 (<0.1%)
                                          ⛁ Unknown ~42.7k (4.3%)
                                          ⛶ Free ~955.5k (95.5%)

Memory ~0
No retained memory

Pi rebuilt text estimate (not provider wire)

S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        ███████░░░  72.0% 36/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark"
`;

exports[`actual Current session first viewport at 80 x 24 'regular' 1`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
pageUp/pageDown Scroll
⛁ ⛁ ⛁ ⛁ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   fake/test
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   SDK mismatch: 44.5k > text ~1.8k; gap
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   Unknown
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Tools ~1.8k (0.2%)
                                          ⛁ Conversation ~12 (<0.1%)
                                          ⛁ Unknown ~42.7k (4.3%)
                                          ⛶ Free ~955.5k (95.5%)

Memory ~0
No retained memory

Pi rebuilt text estimate (not provider wire)

S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
→ Off
  Runs
  Project
  Mark"
`;

exports[`actual Current session first viewport at 80 x 24 'regular' 2`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
pageUp/pageDown Scroll
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Tools ~1.8k (0.2%)
                                          ⛁ Conversation ~12 (<0.1%)
                                          ⛁ Unknown ~42.7k (4.3%)
                                          ⛶ Free ~955.5k (95.5%)

Memory ~0
No retained memory

Pi rebuilt text estimate (not provider wire)

S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        ███████░░░  72.0% 36/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark"
`;

exports[`actual Current session first viewport at 100 x 24 'fullscreen' 1`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
pageUp/pageDown Scroll
⛁ ⛁ ⛁ ⛁ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   fake/test
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   SDK mismatch: 44.5k > text ~1.8k; gap Unknown
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Tools ~1.8k (0.2%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Conversation ~12 (<0.1%)
                                          ⛁ Unknown ~42.7k (4.3%)
                                          ⛶ Free ~955.5k (95.5%)

Memory ~0
No retained memory

Pi rebuilt text estimate (not provider wire)

S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        ███████░░░  72.0% 36/50
→ Off
  Runs
  Project
  Mark"
`;

exports[`actual Current session first viewport at 100 x 24 'fullscreen' 2`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
pageUp/pageDown Scroll
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Tools ~1.8k (0.2%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Conversation ~12 (<0.1%)
                                          ⛁ Unknown ~42.7k (4.3%)
                                          ⛶ Free ~955.5k (95.5%)

Memory ~0
No retained memory

Pi rebuilt text estimate (not provider wire)

S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        ███████░░░  72.0% 36/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark"
`;

exports[`actual Current session first viewport at 100 x 24 'regular' 1`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
pageUp/pageDown Scroll
⛁ ⛁ ⛁ ⛁ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   fake/test
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   SDK mismatch: 44.5k > text ~1.8k; gap Unknown
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Tools ~1.8k (0.2%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Conversation ~12 (<0.1%)
                                          ⛁ Unknown ~42.7k (4.3%)
                                          ⛶ Free ~955.5k (95.5%)

Memory ~0
No retained memory

Pi rebuilt text estimate (not provider wire)

S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        ███████░░░  72.0% 36/50
→ Off
  Runs
  Project
  Mark"
`;

exports[`actual Current session first viewport at 100 x 24 'regular' 2`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
pageUp/pageDown Scroll
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Tools ~1.8k (0.2%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Conversation ~12 (<0.1%)
                                          ⛁ Unknown ~42.7k (4.3%)
                                          ⛶ Free ~955.5k (95.5%)

Memory ~0
No retained memory

Pi rebuilt text estimate (not provider wire)

S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        ███████░░░  72.0% 36/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark"
`;
